istio/echo-tcp-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-echo-vs-from-gw
spec:
  hosts:
    - "*"
  gateways:
    - echo-tcp-gateway
  tcp:
    - match:
        - port: 31400
      route:
        - destination:
            host: tcp-echo-service
            port:
              number: 2701
